use dynamic logging, use common acl ae handler

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,8 @@ set(src
   ${unabto_src}
   ${unabto_module_cli_gopt_src}
   ${unabto_module_fingerprint_acl_src}
+  ${unabto_module_log_dynamic_src}
+  ${unabto_module_log_syslog_src}
   ${unabto_module_read_hex}
   ${UNABTO_MODULES_SRC_DIR}/util/read_hex.c
   ${CMAKE_CURRENT_SOURCE_DIR}/src/unabto_main.c
