--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,8 @@
 version: 1.0.{build}
 image: Visual Studio 2017
+clone_script:
+- cmd: git clone -q --recursive --branch=%APPVEYOR_REPO_BRANCH% https://github.com/%APPVEYOR_REPO_NAME%.git %APPVEYOR_BUILD_FOLDER%
+- cmd: git checkout -qf %APPVEYOR_REPO_COMMIT%
 build_script:
 - cmd: >-
     mkdir builddir || exit 1
