--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,12 +9,12 @@ build_script:
     
     cd builddir || exit 1
     
-    cmake .. || exit 1
+    cmake -DCMAKE_BUILD_TYPE=Release --config Release .. || exit 1
     
-    cmake --build . || exit 1
+    cmake --build . --config Release || exit 1
     
 artifacts:
-- path: builddir\amp_device_stub.exe
+- path: builddir\Release\amp_device_stub.exe
   name: amp_device_stub
 deploy:
   description: ''
